# trusty-rex

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: api-clients.yml  docker-images.yml
api-clients/: typescript-fetch_config.json
api-clients/typescript-fetch/: config.json
api-clients/typescript-fetch/templates/: README.mustache
app/: auth.py  config.py  crud.py  dependencies.py  main.py  models.py  routes.py  schemas.py  startup.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 1cbe38df0a0a_init.py
app/api/: deps.py  main.py
app/api/routes/: logbook.py  schemas.py
app/core/: config.py  db.py
app/database/: __init__.py  crud.py  models.py
docs/example/: .env  docker-compose.yml
